# rust-p

./: .gitignore.md  README.md
arc-swap-coding/: Cargo.toml  README.md
arc-swap-coding/config/: config.yml
arc-swap-coding/src/: lib.rs  main.rs
axumr/: Cargo.toml
axumr/examples/: axum.rs  systemtime.rs
axumr/src/: lib.rs  main.rs  msg.rs
command-cli/catr/: Cargo.toml
command-cli/catr/src/: main.rs
command-cli/cutr/: Cargo.toml
command-cli/cutr/src/: lib.rs  main.rs
command-cli/echor/: Cargo.toml
command-cli/echor/src/: main.rs
command-cli/findr/: Cargo.toml
command-cli/findr/src/: lib.rs  main.rs
command-cli/grepr/: Cargo.toml
command-cli/grepr/examples/: clap.rs  sys-info.rs  walkdir.rs
command-cli/grepr/src/: lib.rs  main.rs
command-cli/headr/: Cargo.toml
command-cli/headr/src/: lib.rs  main.rs
command-cli/uniqr/: Cargo.toml
command-cli/uniqr/src/: lib.rs
command-cli/wcr/: Cargo.toml
command-cli/wcr/src/: lib.rs
crabcan/: Cargo.toml
crabcan/src/: child.rs  cli.rs  config.rs  container.rs  errors.rs  ipc.rs  main.rs
deno/deno_core_example/: Cargo.toml
deno/deno_core_example/examples/: basic.js  basic.rs
echo_v8/: Cargo.toml
echo_v8/examples/: runtime.rs
echo_v8/src/: lib.rs  main.rs  state.rs
egui_demo/: Cargo.toml
egui_demo/src/: app.rs  main.rs
iterators/examples/: basic.rs
iterators/src/: lib.rs
pgx_ex/: Cargo.toml  pgx_ex.control
pgx_ex/sql/: schema.sql
pgx_ex/src/: lib.rs  sorted_id.rs
rdiff/: Cargo.toml  README.md
rdiff/examples/: config.rs  tty.rs
rdiff/src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
rdiff/src/command/: cli.rs
rdiff/src/config/: mod.rs  rdiff.rs  rreq.rs
rdiff/src/request/: config.rs
rdiff/yaml/: request.yml
rust_small_demo/: Cargo.toml  test.txt  user.txt
rust_small_demo/examples/: calc.rs  write-excel.rs
rust_small_demo/macro_define_crate/src/: lib.rs
rust_small_demo/practice_coding/async_book_example/: Cargo.toml
rust_small_demo/practice_coding/async_book_example/examples/: basic.rs  executor.rs  not_pin.rs  pin.rs  time_future.rs  time_futures_ex.rs  two_futures.rs
rust_small_demo/practice_coding/bevy_example/: Cargo.toml
rust_small_demo/practice_coding/getaver/src/: lib.rs
rust_small_demo/practice_coding/kv/: Cargo.toml  abi.proto  build.rs
rust_small_demo/practice_coding/kv/src/: client.rs  server.rs
rust_small_demo/practice_coding/kv/src/pb/: abi.rs  mod.rs
rust_small_demo/practice_coding/macro_define_crate/: Cargo.toml
rust_small_demo/practice_coding/patience/: Cargo.toml
rust_small_demo/practice_coding/patience/src/: main.rs
rust_small_demo/practice_coding/small_demo/: Cargo.toml
rust_small_demo/practice_coding/small_demo/src/: lib1.rs  main-Ddebug&Display2.rs  main-Debug&Display.rs  main-Deref&DerefMut.rs  main-Rc.rs  main-RefCell.rs  main-bak2.rs  main-clone&copy.rs  main-closeure1.rs  main-convert.rs  main-createPPM.rs  main-deref.rs  main-enum.rs  main-error.rs  main-error3.rs  main-future.rs  main-match@.rs  main-mutex1.rs  main-mutex2.rs  main-other.rs  main-recursive.rs  main-struct2file.rs  main-trait1.rs  main-tree2.rs  main-vector.rs  main.rs
rust_small_demo/practice_coding/training_code/src/: encoder.rs  fibonacci.rs  strtok.rs  ticket.rs
rust_small_demo/practice_coding/why_async/src/: main.rs
rust_small_demo/rust_ool/: Cargo.toml
rust_small_demo/rust_ool/main/: Cargo.toml
rust_small_demo/rust_ool/main/src/: main.rs
rust_small_demo/src/: lib2.rs  main-Arc.rs  main-RefCell2.rs  main-async.rs  main-async1.rs  main-async2.rs  main-bak.rs  main-channel1.rs  main-channel2.rs  main-channel3.rs  main-closeure2.rs  main-cobo-lib.rs  main-cow.rs  main-drop.rs  main-error2.rs  main-file.rs  main-from&into.rs  main-hashmap.rs  main-iteator2.rs  main-iterator.rs  main-iterator1.rs  main-recursive2.rs  main-ref.rs  main-rust-ool.rs  main-struct.rs  main-thread.rs  main-trait.rs  main-trait2.rs  main-tree1.rs  main.rs
rust_small_demo/training_code/: Cargo.toml
rust_small_demo/training_code/src/: encoder.rs  fibonacci.rs  lib.rs  strtok.rs  ticket.rs
rust_small_demo/why_async/: Cargo.toml
rust_small_demo/why_async/src/: main.rs
sqlxr/: .env  Cargo.toml  README.md
sqlxr/migrations/: 20221030102330_init.down.sql  20221030102330_init.up.sql  20221030102623_data.down.sql  20221030102623_data.up.sql
sqlxr/src/: main.rs
tonicr/: Cargo.toml  README.md  build.rs  tosei.proto
tonicr/examples/: client.rs  server.rs
tonicr/src/: client.rs  lib.rs  server.rs
tonicr/src/tosei/: api.rs  mod.rs
web2image/: Cargo.toml
web2image/src/: lib.rs  main.rs
web2image/src/args/: mod.rs
web2image/src/error/: mod.rs
web2image/src/screenshot/: mod.rs  qrcodec.rs
