[package]
name = "crabcan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
nix = { version = "0.26", features = ["sched", "feature", "socket"] }
scan_fmt = "0.2.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["std"] }
