[package]
name = "rdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.2", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
similar = "2.2.0"
tokio = { version = "1.21.2", features = ["full"] }


[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"