[package]
name = "rdiff"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rdiff"
path = "src/bin/rdiff.rs"

[[bin]]
name = "rreq"
path = "src/bin/rreq.rs"

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.58"
atty = "0.2.14"
clap = { version = "4.0.2", features = ["derive"] }
console = "0.15.2"
dialoguer = "0.10.2"
http = "0.2.8"
http-serde = "1.1.2"
mime = "0.3.16"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_qs = "0.10.1"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.13"
similar = { version = "2.2.0", features = ["inline"] }
syntect = "5.0.0"
tokio = { version = "1.21.2", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }


[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
