[workspace]

resolver = "2" # Important! wgpu/Bevy needs this!

members = [
    "practice_coding/small_demo",
    "practice_coding/macro_define_crate",
    "practice_coding/getaver",
    "practice_coding/why_async",
    "practice_coding/training_code",
    "practice_coding/kv",
    "practice_coding/patience",
    "practice_coding/async_book_example",
    "practice_coding/bevy_example"
]