[package]
name = "web2image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
headless_chrome = "0.9.0"
thiserror = "1.0.37"
qrcode = { version = "0.12", features = ["image"] }
image = "0.23"
