[package]
name = "grepr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.7", features = ["derive"] }
regex = "1.6.0"
sys-info = "0.9.1"
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
